--- a/LifeSpot/Views/index.html
+++ b/LifeSpot/Views/index.html
@@ -3,8 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <title>LifeSpot</title>
+    <!--Подключение стилей по относительному пути из внешнего файла-->
+    <link href="../Static/CSS/index.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <p>Приветствуем на LifeSpot!</p>
+        <div class ="bordered">
+        <!--Заголовок страницы-->
+        <h1>LifeSpot - прямые трансляции с улиц</h1>
+        <!--Параграф-->
+        <p>Покажем, что происходит прямо сейчас</p>
+            <!--Кнопки, обернутые в ссылки-->
+            <!--<a href="https://www.youtube.com/watch?v=wCcMcaiRbhM"><button >Санкт-Петербург</button></a>
+            <a href="https://www.youtube.com/watch?v=srlpC5tmhYs"><button>Нью-Йорк</button></a>
+            <a href="https://www.youtube.com/watch?v=JplMzss6_YE&ab_channel=WokiliWanders"><button>Лондон</button></a>!-->
+            <form action="">
+                <p><input type="search" size="40" class="search" /></p>
+            </form>
+            <div class ="video-container">
+            <!--Нью-Йорк-->
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/srlpC5tmhYs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <h3 class="video-title">Нью-Йорк, Брайант Парк</h3>
+            </div>
+            <div class ="video-container">
+            <!--Санкт-Петербург-->
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/wCcMcaiRbhM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <h3 class="video-title">Санкт-Петербург, Невский Проспект</h3>
+            </div>
+            <div class ="video-container">
+            <!--Лондон-->
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/JplMzss6_YE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <h3 class="video-title">Лондон, автобусный маршрут</h3>
+            </div>
+        </div>
+        <aside id="sidebar">
+            <div class="navbar">
+                <a href="/"><p>Все трансляции</p></a>
+                <a href="/"><p>О проекте</p></a>
+            </div>
+        </aside>
+        <footer>
+            <p>LifeSpot - все права защищены</p>
+            <p>Связаться с нами: contact@lifespot.ru</p>
+        </footer>
 </body>
 </html>
