--- a/LifeSpot/Static/CSS/index.css
+++ b/LifeSpot/Static/CSS/index.css
@@ -71,3 +71,19 @@
     {
         background-color: linen;
     }
+
+    .review-container,.review-button
+    {
+        display: inline-block;
+        margin-top: 0.5em;
+        padding-left: 1%;
+        padding-top: 1%;
+    }
+
+    .review-text
+    {
+        display: block;
+        margin-top: 0.5em;
+        padding-left: 1%;
+        padding-top: 1%;
+    }
